refactor(security): stabilize security refactor with cleanup, collaboration, and audit logging
- Extract duplicate SHA-256 logic into HashUtils (ShareLinkService, RefreshTokenService, UserService)
- Deduplicate avatar handling in PublicationService via handlePersonAvatar()
- Extract date parsing into shared lib/dateUtils.ts
- Consolidate ApiResponse type into shared types/api.ts (5 API files)
- Add collaboration support: backend publication_access query in listPublications() + frontend CollaboratorManager
- Add audit logging to admin CRUD operations (createUser, deleteUser, resetPassword, changeRole)
- Add backup extraction to BackupService with tests
- Fix ExportController path variable type (String → Long)
- Add AccessDeniedException handler with sanitized 500 error messages
- Make CORS origins configurable via app.cors.allowed-origins
- Restrict /api/photos/** to GET only in SecurityConfig
- Add cascade delete for publication_access in deletePublication()
- Add @Transactional annotations to UserService methods
- Add fallback owner check in PublicationAuthorizationService for migration safety
- Add GET-only restriction on /api/photos/** in SecurityConfig
- Clean up debug console.log statements from WorkbenchHeader.vue
- Add proper onBeforeUnmount scroll listener cleanup in TimelineView.vue
- Update CLAUDE.md/README.md/AGENTS.md to reflect current architecture
- Add test coverage: BackupServiceTest, HashUtilsTest, JwtServiceTest, LoginRateLimitFilterTest, RefreshTokenServiceTest, ShareLinkServiceTest, PersonDTOTest, FeedbackStripTest

All tests passing: backend 88 (2 @Disabled), frontend 61.
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>