@@ -1,13 +1,13 @@
-// backend/src/main/java/com/genealogy/server/controller/UserController.java
 package com.genealogy.server.controller;
 
+import com.genealogy.server.dto.ApiResponse;
 import com.genealogy.server.model.User;
 import com.genealogy.server.repository.UserRepository;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/users")
@@ -20,17 +20,20 @@ public class UserController {
     }
 
     @GetMapping("/search")
-    public List<Map<String, Object>> searchUsers(@RequestParam String q) {
+    public ApiResponse<List<Map<String, Object>>> searchUsers(@RequestParam String q) {
         if (q == null || q.trim().isEmpty()) {
-            return List.of();
+            return ApiResponse.success(List.of());
         }
-        return userRepository.findByUsernameContainingIgnoreCaseOrNicknameContainingIgnoreCase(q, q)
+        List<Map<String, Object>> users = userRepository.findByUsernameContainingIgnoreCaseOrNicknameContainingIgnoreCase(q, q)
                 .stream()
-                .map(user -> Map.of(
-                        "id", (Object) user.getId(),
-                        "username", user.getUsername(),
-                        "nickname", user.getNickname() != null ? user.getNickname() : user.getUsername()
-                ))
-                .collect(Collectors.toList());
+                .map(user -> {
+                    Map<String, Object> m = new LinkedHashMap<>();
+                    m.put("id", user.getId());
+                    m.put("username", user.getUsername());
+                    m.put("nickname", user.getNickname() != null ? user.getNickname() : user.getUsername());
+                    return m;
+                })
+                .toList();
+        return ApiResponse.success(users);
     }
 }
